{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 45,
  "lineage": "a33aa68b-d363-de4c-6f88-1fc8a01004c6",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-prod",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "grafana-ingress",
                "namespace": "monitoring",
                "resource_version": "51792",
                "uid": "f007569a-9900-4c08-82ac-30788b684cdd"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "grafana.oracle.shdkej.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kube-prometheus-stack-grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "grafana.oracle.shdkej.com"
                    ],
                    "secret_name": "grafana-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.oci_core_instance.agents",
            "data.oci_core_instance.server",
            "module.apps.helm_release.argocd",
            "module.apps.helm_release.cert_manager",
            "module.apps.helm_release.ingress_nginx",
            "module.apps.helm_release.kube_prometheus_stack",
            "module.apps.null_resource.letsencrypt_issuer",
            "module.k3s.data.local_file.k3s_token",
            "module.k3s.null_resource.firewall_agents",
            "module.k3s.null_resource.firewall_server",
            "module.k3s.null_resource.k3s_agents",
            "module.k3s.null_resource.k3s_server",
            "module.k3s.null_resource.k3s_token",
            "module.k3s.null_resource.kubeconfig",
            "oci_core_security_list.k3s",
            "oci_core_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.apps",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-ingress",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt-prod",
                  "nginx.ingress.kubernetes.io/backend-protocol": "HTTP",
                  "nginx.ingress.kubernetes.io/ssl-redirect": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "argocd-ingress",
                "namespace": "argocd",
                "resource_version": "51793",
                "uid": "25963b75-488d-46b1-b166-149dbcfc546e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "argocd.oracle.shdkej.com",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "argocd.oracle.shdkej.com"
                    ],
                    "secret_name": "argocd-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.oci_core_instance.agents",
            "data.oci_core_instance.server",
            "module.apps.helm_release.argocd",
            "module.apps.helm_release.cert_manager",
            "module.apps.helm_release.ingress_nginx",
            "module.apps.helm_release.kube_prometheus_stack",
            "module.apps.null_resource.letsencrypt_issuer",
            "module.k3s.data.local_file.k3s_token",
            "module.k3s.null_resource.firewall_agents",
            "module.k3s.null_resource.firewall_server",
            "module.k3s.null_resource.k3s_agents",
            "module.k3s.null_resource.k3s_server",
            "module.k3s.null_resource.k3s_token",
            "module.k3s.null_resource.kubeconfig",
            "oci_core_security_list.k3s",
            "oci_core_subnet.main"
          ]
        }
      ]
    }
  ]
}